WEATHER INFORMATION PORTAL

--- a/RESUME.html
+++ b/RESUME.html
@@ -3,11 +3,11 @@
 <head>
     <title>Resume</title>
 </head>
-<body  bgcolor="beige">
+<body>
     
     <center>
          <h1>
-        <font color = "brown">RESUME</font>
+        <font color = "navy">RESUME</font>
     </h1>
     <hr color = "black">
 
@@ -28,26 +28,23 @@
         <br>
         <b>Gender : </b> Female
         <br>
-        <b>Address : </b> Paras Colony Tikuriya Tola
+        <b>Address : </b> Paras Colony Tikuriya Tola,Satna,Madhya Pradesh
         <br>
         <b>Mobile: </b> 9479480327
         <br>
         <b>Email: </b> vaishviagrawal06@gmail.com
         <br>
-
-        <p>
-  LinkedIn: 
+       <b>LinkedIn: </b> 
   <a href="https://www.linkedin.com/in/vaishvi-agrawal-792407331/" target="_blank">
     https://www.linkedin.com/in/vaishvi-agrawal-792407331/
+     <!-- https://www.linkedin.com/in/vaishvi-agrawal -->
   </a>
-</p>
+  <br>
 
-<p>
-  GitHub: 
+ <b> GitHub: </b>
   <a href="https://github.com/vaishviagrawal06" target="_blank">
     https://github.com/vaishviagrawal06
   </a>
-</p>
 
 
     <h2>
