--- a/RESUME.html
+++ b/RESUME.html
@@ -96,9 +96,8 @@
         <b>Design Head</b>
     </h4>
     <ul>
-    <li>Coding Era Community at BGIEM</li> 
-    <li> 10/2025 </li> 
-    <li> Present</li>
+    <li>Coding Era Community at BGIEM</li>
+     <pre>10/2025     Present</pre>  <!--pre tag use kiya hai so that dono cheeze ek hi line me aa jaaye-->
     <li>Manage design and make posters,template for the community.</li>
     </ul>
     <h2>
