transition of ball

--- a/HTML/lect6/transition.html
+++ b/HTML/lect6/transition.html
@@ -10,6 +10,7 @@
       width: 1000px;
       height: 400px;
       border: 2px solid red;
+      background-color: rgb(244, 244, 149);
     }
 
     #parent:hover .one {
