MODEL DAY ASSIGNEMENT

--- a/HTML/a/index.html
+++ b/HTML/a/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MODEL DAY ASSIGNMENT</title>
    <style>
     *{
         margin: 0;
@@ -20,6 +20,8 @@
         color: white;
         height: 60px;
         padding: 20px 30px;
+        position: static;
+
     }
     #logo{
          
@@ -30,6 +32,7 @@
     }
     #menu{
     
+        position: static;
         display: inline-block;
         margin-left: 1000px;
         font-size: 18px;
