--- a/HTML/lect8/hello.html
+++ b/HTML/lect8/hello.html
@@ -25,13 +25,22 @@
         .outer_box{
             height: 300px;
             width: 800px;
-            color: white;
+            color: black;
             background-color: darkblue;
 
 
         }
         .container{
             display: flex;
+            justify-content: space-between;
+            align-items: center;
+            flex-wrap: wrap;
+            gap: 20px;
+
+            background-color: white;
+            height: 100px;
+            width: 800px;
+            padding: 20px;
         }
     </style>
 </head>
