--- a/HTML/lect8/hello.html
+++ b/HTML/lect8/hello.html
@@ -25,6 +25,7 @@
       padding: 15px;
       text-align: center;
       font-size: 16px;
+      color: white;
     }
 
     .main-box{
@@ -61,7 +62,7 @@
     #one{
         /* flex-basis: 200px; */
         /* flex-shrink: 3; */
-        flex-grow: 2;
+        /* flex-grow: 2; */
     }
     #two{
         flex-grow: 1;
