--- a/HTML/lect9/hello.html
+++ b/HTML/lect9/hello.html
@@ -5,20 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 <style>
+    .parent{
+      transform: rotateY(180);
+
+    }
     div{
         height: 300px;
         width: 300px;
         background-color: aquamarine;
         border: 2px solid black;
         margin: 20px auto;
+                transition: 3s;
+
     }
     img{
         height: 300px;
         width: 300px;
-        transition: 3s;
+        /* transition: 3s; */
     }
     .parent:hover{
-        transform: rotateY(180);
     }
 </style>
 </head>
