--- a/HTML/lect9/hello.html
+++ b/HTML/lect9/hello.html
@@ -1,35 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-<style>
-    .parent{
-      transform: rotateY(180);
-
-    }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Rotate Image</title>
+  <style>
     div{
-        height: 300px;
-        width: 300px;
-        background-color: aquamarine;
-        border: 2px solid black;
-        margin: 20px auto;
-                transition: 3s;
+      height: 300px;
+      width: 300px;
+      background-color: aquamarine;
+      border: 2px solid black;
+      margin: 20px auto;
+      transition: 3s;
+    }
 
-    }
     img{
-        height: 300px;
-        width: 300px;
-        /* transition: 3s; */
+      height: 300px;
+      width: 300px;
+      transition: 3s;
     }
-    .parent:hover{
+
+    .parent:hover img{
+      transform: rotateY(180deg);
     }
-</style>
+  </style>
 </head>
 <body>
-    <div class="parent">
-<img src="https://images.unsplash.com/photo-1768590238659-b401ffa9571e?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="sky">
-    </div>
+
+  <div class="parent">
+    <img src="https://images.unsplash.com/photo-1768590238659-b401ffa9571e?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="sky">
+  </div>
+
 </body>
 </html>
