--- a/HTML/lect9/hello.html
+++ b/HTML/lect9/hello.html
@@ -6,21 +6,21 @@
   <title>Rotate Image</title>
   <style>
     div{
-      height: 300px;
+      height: 500px;
       width: 300px;
-      background-color: aquamarine;
+      background-color: rgb(22, 110, 81);
       border: 2px solid black;
       margin: 20px auto;
       transition: 3s;
     }
 
     img{
-      height: 300px;
+      height: 250px;
       width: 300px;
       transition: 3s;
     }
 
-    .parent:hover img{
+    .parent:hover{
       transform: rotateY(180deg);
     }
   </style>
@@ -30,6 +30,10 @@
   <div class="parent">
     <img src="https://images.unsplash.com/photo-1768590238659-b401ffa9571e?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="sky">
   </div>
+  <!-- <div>
+    <img src="    <img src="https://media.istockphoto.com/id/2173986475/photo/milky-way-sky-over-trees-at-yosemite-national-park-in-california.webp?s=612x612&w=is&k=20&c=Ae8W1hawrfE9tTX-rYrQjb3btTIuoMjm-DUhppGMh4s=" alt="">
+" alt="">
+  </div> -->
 
 </body>
 </html>
