--- a/HTML/lect9/hello.html
+++ b/HTML/lect9/hello.html
@@ -1,39 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Rotate Image</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Flip Card</title>
+
   <style>
-    div{
+    .parent {
       height: 500px;
       width: 300px;
-      background-color: rgb(22, 110, 81);
+      background-color: rgb(249, 249, 249);
       border: 2px solid black;
       margin: 20px auto;
-      transition: 3s;
+
+      position: relative;
+      perspective: 1000px;
     }
 
-    img{
-      height: 250px;
-      width: 300px;
-      transition: 3s;
+    .card {
+      height: 100%;
+      width: 100%;
+      position: relative;
+      transition: 4s;
+      transform-style: preserve-3d;
     }
 
-    .parent:hover{
+    .parent:hover .card {
       transform: rotateY(180deg);
+    }
+
+    .a{
+      position: absolute; 
+      height: 100%;
+      width: 100%;
+      backface-visibility: hidden; 
+    }
+    .b {
+      position: absolute; 
+      height: 100%;
+      width: 100%;
+      backface-visibility: hidden;
+    }
+
+    img {
+      height: 250px;
+      width: 100%;
+      
+    }
+
+    .b {
+      background: white;
+      padding: 20px;
+      box-sizing: border-box;
+      transform: rotateY(180deg);
+      display: flex;
+      margin: 20px auto;
     }
   </style>
 </head>
+
 <body>
-
   <div class="parent">
-    <img src="https://images.unsplash.com/photo-1768590238659-b401ffa9571e?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="sky">
-  </div>
-  <!-- <div>
-    <img src="    <img src="https://media.istockphoto.com/id/2173986475/photo/milky-way-sky-over-trees-at-yosemite-national-park-in-california.webp?s=612x612&w=is&k=20&c=Ae8W1hawrfE9tTX-rYrQjb3btTIuoMjm-DUhppGMh4s=" alt="">
-" alt="">
-  </div> -->
+    <div class="card">
+      <div class="a">
+        <img src="https://images.unsplash.com/photo-1768590238659-b401ffa9571e?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+          alt="sky" />
+      </div>
 
+      <div class="b">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo sint
+          totam officia repellendus? Nesciunt nulla animi repellendus quos
+          doloremque porro ad dignissimos facere rerum officiis?
+        </p>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
