--- a/HTML/lect9/hello.html
+++ b/HTML/lect9/hello.html
@@ -15,10 +15,23 @@
       position: relative;
 
     }
-
-      transition: 1.5s;
-      transform-style: preserve-3d;
+    
+    .a{
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      backface-visibility: hidden;
     }
+
+    img{
+      height: 500px;
+      width: 300px;
+      display: block;
+    }
+
+    
 
     .parent:hover{
       transform: rotateY(180deg);
