--- a/HTML/lect9/hello.html
+++ b/HTML/lect9/hello.html
@@ -68,7 +68,7 @@
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit.
         Explicabo sint totam officia repellendus? Nesciunt nulla animi
-        repellendus quos doloremque porro ad dignissimos facere rerum officiis?
+        repellendus quos doloremque porro ad the dignissimos facere rerum officiis?
       </p>
     </div>
   </div>
