--- a/HTML/lect10/index.html
+++ b/HTML/lect10/index.html
@@ -18,6 +18,10 @@
             overflow: hidden;
             position: relative;
         }
+        h1{
+            text-align: ;
+            margin-top: 25px;
+        }
     </style>
 </head>
 <body>
