--- a/HTML/lect10/index.html
+++ b/HTML/lect10/index.html
@@ -14,18 +14,20 @@
         body{
             width: 100%;
             height: 100%;
-            background: linear-gradient(lightblue,white);
+            background: linear-gradient(lightblue);
             overflow: hidden;
             position: relative;
         }
         h1{
-            text-align: ;
+            text-align: center;
             margin-top: 25px;
+            font-size: 45px;
+            color: rgb(196, 20, 155);
         }
     </style>
 </head>
 <body>
-    <h1>🎉 WELCOME TO THE BALLOON FESTEVIAL</h1>
+    <h1>🎉 WELCOME TO THE BALLOON FESTEVIAL🎈</h1>
     <div class="balloon1"></div>
     <div class="balloon2"></div>
     <div class="balloon3"></div>
