--- a/HTML/lect10/index.html
+++ b/HTML/lect10/index.html
@@ -24,6 +24,13 @@
             font-size: 45px;
             color: rgb(196, 20, 155);
         }
+
+        .position{
+            position: absolute;
+            width: 50px;
+            height: 70px;
+            
+        }
     </style>
 </head>
 <body>
