--- a/HTML/lect10/index.html
+++ b/HTML/lect10/index.html
@@ -27,18 +27,26 @@
 
         .position{
             position: absolute;
-            width: 50px;
-            height: 70px;
-            
+            width: 70px;
+            height: 90px;
+            border-radius: 50% ;
+
         }
+         .b1 {
+      background: red;
+      left: 60px;
+      top: 220px;
+      animation-duration: 2.5s;
+    }
+
     </style>
 </head>
 <body>
     <h1>🎉 WELCOME TO THE BALLOON FESTEVIAL🎈</h1>
-    <div class="balloon1"></div>
-    <div class="balloon2"></div>
-    <div class="balloon3"></div>
-    <div class="balloon4"></div>
-    <div class="balloon5"></div>
+    <div class="balloon b1"></div>
+    <div class="balloon b2"></div>
+    <div class="balloon b3"></div>
+    <div class="balloon b4"></div>
+    <div class="balloon b5"></div>
 </body>
 </html>
