--- a/HTML/lect10/index.html
+++ b/HTML/lect10/index.html
@@ -1,52 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        *{
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Balloon Festival</title>
 
-        body{
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(lightblue);
-            overflow: hidden;
-            position: relative;
-        }
-        h1{
-            text-align: center;
-            margin-top: 25px;
-            font-size: 45px;
-            color: rgb(196, 20, 155);
-        }
-
-        .position{
-            position: absolute;
-            width: 70px;
-            height: 90px;
-            border-radius: 50% ;
-
-        }
-         .b1 {
-      background: red;
-      left: 60px;
-      top: 220px;
-      animation-duration: 2.5s;
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
     }
 
-    </style>
+    body {
+      width: 100%;
+      height: 100vh;
+      background: linear-gradient(lightblue, white);
+      overflow: hidden;
+      position: relative;
+    }
+
+    h1 {
+      text-align: center;
+      margin-top: 25px;
+      font-size: 45px;
+      color: rgb(196, 20, 155);
+    }
+
+    /* ✅ Common Balloon style */
+    .balloon {
+      position: absolute;
+      width: 90px;
+      height: 120px;
+      border-radius: 60%;
+    }
+
+    /* ✅ b1 Balloon */
+    .b1 {
+      background: red;
+      left: 60px;
+      top: 520px;
+
+      animation: fly1 3s linear infinite;
+    }
+
+    /* ✅ b1 Animation */
+    @keyframes fly1 {
+      0% {
+        transform: translateY(0) translateX(0);
+      }
+      50% {
+        transform: translateY(-300px) translateX(30px);
+      }
+      100% {
+        transform: translateY(-650px) translateX(-30px);
+      }
+    }
+  </style>
 </head>
+
 <body>
-    <h1>🎉 WELCOME TO THE BALLOON FESTEVIAL🎈</h1>
-    <div class="balloon b1"></div>
-    <div class="balloon b2"></div>
-    <div class="balloon b3"></div>
-    <div class="balloon b4"></div>
-    <div class="balloon b5"></div>
+  <h1>🎉 WELCOME TO THE BALLOON FESTEVIAL 🎈</h1>
+
+  <div class="balloon b1"></div>
 </body>
 </html>
