--- a/HTML/lect10/index.html
+++ b/HTML/lect10/index.html
@@ -106,6 +106,17 @@
             animation-iteration-count: infinite;
     }
 
+    #one::after {
+  content: "";
+  position: absolute;
+  bottom: -70px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 3px;
+  height: 70px;
+  background: #555;
+  border-radius: 2px;
+
    @keyframes fly{
      0% {
         transform: translateY(0) translateX(0);
