--- a/HTML/lect10/index.html
+++ b/HTML/lect10/index.html
@@ -106,7 +106,7 @@
             animation-iteration-count: infinite;
     }
 
-    #one::after {
+    .balloon::after {
   content: "";
   position: absolute;
   bottom: -70px;
