--- a/HTML/lect10/index.html
+++ b/HTML/lect10/index.html
@@ -139,5 +139,7 @@
   <div class="balloon b3"></div>
   <div class="balloon b4"></div>
   <div class="balloon b5"></div>
+
+  <div class="ground"></div>
 </body>
 </html>
