--- a/HTML/lect10/index.html
+++ b/HTML/lect10/index.html
@@ -20,6 +20,14 @@
       position: relative;
     }
 
+    .ground{
+      color: green;
+      width: 100%;
+      height: 110px;
+      position: absolute;
+      bottom: 0px;
+    }
+
     h1 {
       text-align: center;
       margin-top: 25px;
