--- a/HTML/lect10/index.html
+++ b/HTML/lect10/index.html
@@ -20,12 +20,12 @@
       position: relative;
     }
 
-    .ground{
-      color: green;
+     .ground{
+      background: green;
       width: 100%;
       height: 110px;
       position: absolute;
-      bottom: 0px;
+      bottom: 0;
     }
 
     h1 {
@@ -44,6 +44,7 @@
       background: rgb(255, 0, 0);
       left: 200px;
       top: 520px;
+      bottom: 110px;
 
           animation-name: fly;
             animation-duration: 3s;
@@ -59,6 +60,7 @@
       background: rgb(140, 196, 61);
       left: 400px;
       top: 520px;
+      bottom: 110px;
 
           animation-name: fly;
             animation-duration: 2s;
@@ -74,6 +76,7 @@
       background: hotpink;
       left: 600px;
       top: 520px;
+      bottom: 110px;
 
           animation-name: fly;
             animation-duration: 3.5s;
@@ -90,6 +93,7 @@
       background: rgb(0, 255, 102);
       left: 800px;
       top: 520px;
+      bottom: 110px;
 
           animation-name: fly;
             animation-duration: 2s;
@@ -107,6 +111,7 @@
       background: rgb(0, 170, 255);
       left: 1000px;
       top: 520px;
+      bottom: 110px;
 
           animation-name: fly;
             animation-duration: 4s;
