--- a/HTML/lect10/index.html
+++ b/HTML/lect10/index.html
@@ -15,24 +15,25 @@
     body {
       width: 100%;
       height: 100vh;
-      background: linear-gradient(lightblue, white);
+      background: linear-gradient(rgb(96, 183, 212), white);
       overflow: hidden;
       position: relative;
     }
 
      .ground{
-      background: green;
+      background: linear-gradient(rgb(89, 210, 89) ,white);
       width: 100%;
       height: 110px;
       position: absolute;
       bottom: 0;
+      left: 0;
     }
 
     h1 {
       text-align: center;
       margin-top: 25px;
       font-size: 45px;
-      color: rgb(196, 20, 155);
+      color: rgb(20, 23, 196);
     }
 
 
@@ -44,7 +45,6 @@
       background: rgb(255, 0, 0);
       left: 200px;
       top: 520px;
-      bottom: 110px;
 
           animation-name: fly;
             animation-duration: 3s;
@@ -60,7 +60,6 @@
       background: rgb(140, 196, 61);
       left: 400px;
       top: 520px;
-      bottom: 110px;
 
           animation-name: fly;
             animation-duration: 2s;
@@ -76,7 +75,6 @@
       background: hotpink;
       left: 600px;
       top: 520px;
-      bottom: 110px;
 
           animation-name: fly;
             animation-duration: 3.5s;
@@ -93,7 +91,6 @@
       background: rgb(0, 255, 102);
       left: 800px;
       top: 520px;
-      bottom: 110px;
 
           animation-name: fly;
             animation-duration: 2s;
@@ -111,7 +108,6 @@
       background: rgb(0, 170, 255);
       left: 1000px;
       top: 520px;
-      bottom: 110px;
 
           animation-name: fly;
             animation-duration: 4s;
