--- a/HTML/lect11/index.html
+++ b/HTML/lect11/index.html
@@ -4,19 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .parent
+        {
+            border: 3px solid ;
+            height: 800px;
+            
+        }
+    </style>
 </head>
 <body>
     <div class="parent">
-        <div class="child"></div>
-        <div class="child"></div>
-        <div class="child"></div>
-        <div class="child"></div>
-        <div class="child"></div>
-        <div class="child"></div>
-        <div class="child"></div>
-        <div class="child"></div>
-        <div class="child"></div>
-        <div class="child"></div>
+        <div class="child" id="one">1</div>
+        <div class="child"id="two" >2</div>
+        <div class="child" id="three">3</div>
+        <div class="child" id="four">4</div>
+        <div class="child" id="five">5</div>
+        <div class="child" id="six">6</div>
+        <div class="child" id="seven">7</div>
+        <div class="child" id="eight">8</div>
+        <div class="child" id="nine">9</div>
+        <div class="child" id="ten">10</div>
     </div>
     
 </body>
