--- a/HTML/lect11/index.html
+++ b/HTML/lect11/index.html
@@ -15,6 +15,9 @@
             grid-template-columns:200px 200px 200px;
             grid-template-rows:200px ;
 
+            grid-template-columns: 1fr 1fr 1fr;
+            /* grid-template-rows: 200px 200px 200px; */
+
 
         }
         .child{
@@ -26,6 +29,9 @@ background-color: aqua;
 border: 3px solid blue;
 grid-column-start: 2;
 grid-column-end: 3;
+
+grid-row-start: 2;
+grid-row-end:3 ;
         }
         #seven{
 background-color: rgb(52, 218, 157);
