--- a/HTML/lect11/index.html
+++ b/HTML/lect11/index.html
@@ -14,6 +14,7 @@
             /* margin: 20px; */
             grid-template-columns:200px 200px 200px;
             grid-template-rows:200px ;
+            gap: 20px ;
 
             grid-template-columns: 1fr 1fr 1fr;
             /* grid-template-rows: 200px 200px 200px; */
