--- a/HTML/lect11/hello.html
+++ b/HTML/lect11/hello.html
@@ -5,18 +5,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        
+         .parent
+        {
+            border: 3px solid black;
+            height: 800px;
+            width: 700px;
+            display: grid;
+            background-color: antiquewhite;
+            /* margin: 20px; */
+            grid-template-columns:200px 200px 200px;
+            grid-template-rows:200px ;
+            gap: 20px ;
+
+            /* grid-template-columns: 1fr 1fr 1fr; */
+            /* grid-template-rows: 200px 200px 200px; */
+
+
+        }
+        .child{
+            background-color: aliceblue;
+            border: 1px solid black;
+        }
+
+
     </style>
 </head>
 <body>
      <div class="parent">
         <div class="child" id="one">
-            <img src="https://images.unsplash.com/photo-1768409234914-96f61529b7e2?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D " alt="">
+            <img src="https://images.unsplash.com/photo-1768409234914-96f61529b7e2?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D " alt="1">
         </div>
-        <div class="child"id="two" >2</div>
-        <div class="child" id="three">3</div>
-        <div class="child" id="four">4</div>
-        <div class="child" id="five">5</div>
+        <div class="child"id="two" >
+            <img src="https://images.unsplash.com/photo-1768391267094-b5c289a0b395?q=80&w=687&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="2">
+        </div>
+        <div class="child" id="three">
+            <img src="https://plus.unsplash.com/premium_photo-1766012368210-14b362ad9805?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="3">
+        </div>
+        <div class="child" id="four">
+            <img src="https://images.unsplash.com/photo-1768432983836-84dde84cdbd9?q=80&w=735&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="4">
+        </div>
+        <div class="child" id="five">
+            <img src="https://images.unsplash.com/photo-1761839258753-85d8eecbbc29?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="5">
+        </div>
      </div>
     
 </body>
