--- a/HTML/lect11/hello.html
+++ b/HTML/lect11/hello.html
@@ -20,6 +20,10 @@
         .child{
             background-color: aliceblue;
             border: 1px solid black;
+            overflow: hidden;
+        }
+        .child img{
+            
         }
 
 
