--- a/HTML/lect11/hello.html
+++ b/HTML/lect11/hello.html
@@ -10,7 +10,7 @@
       width: 700px;
       height: 800px;
       display: grid;
-      background-color: antiquewhite;
+      background-color: rgb(252, 247, 240);
 
       grid-template-columns: repeat(3, 200px);
       grid-auto-rows: 200px; 
@@ -19,11 +19,16 @@
     }
         .child{
             background-color: aliceblue;
-            border: 1px solid black;
+            border: px solid black;
             overflow: hidden;
         }
         .child img{
-            
+            height: 100%;
+            width: 100%;
+            display: block;
+        }
+        #two{
+
         }
 
 
