--- a/HTML/lect11/hello.html
+++ b/HTML/lect11/hello.html
@@ -14,7 +14,7 @@
 
       grid-template-columns: repeat(3, 200px);
       grid-auto-rows: 200px; 
-      gap: 20px;
+      gap: 10px;
       padding: 20px;
     }
         .child{
@@ -28,7 +28,11 @@
             display: block;
         }
         #two{
+            grid-column-start: 1;
+             grid-column-end: 1;
 
+grid-row-start: 1;
+grid-row-end:3 ;
         }
 
 
