--- a/HTML/lect11/hello.html
+++ b/HTML/lect11/hello.html
@@ -28,11 +28,11 @@
             display: block;
         }
         #two{
-            grid-column-start: 1;
+            /* grid-column-start: 1;
              grid-column-end: 1;
 
 grid-row-start: 1;
-grid-row-end:3 ;
+grid-row-end:3 ; */
         }
 
 
