--- a/HTML/lect11/hello.html
+++ b/HTML/lect11/hello.html
@@ -19,8 +19,9 @@ justify-content: center;
     }
         .child{
             background-color: aliceblue;
-            border: px solid black;
+            border: 1px solid black;
             overflow: hidden;
+        
         }
         .child img{
             height: 100%;
