--- a/HTML/lect11/hello.html
+++ b/HTML/lect11/hello.html
@@ -8,11 +8,11 @@
          .parent {
       border: 3px solid black;
       /* width: 700px; */
-      height: 800px;
+      height: 600px;
       display: grid;
       background-color: rgb(252, 247, 240);
 justify-content: center;
-      grid-template-columns: repeat(3,);
+      grid-template-columns: repeat(3, 1fr);
       grid-auto-rows: 200px; 
       gap: 10px;
       padding: 20px;
@@ -30,6 +30,10 @@ justify-content: center;
         }
         #two{
             grid-row:span 2;
+        }
+        .child:hover{
+            transform: scale(0.9);
+            filter: blur(1px);
         }
 
 
