--- a/HTML/lect11/hello.html
+++ b/HTML/lect11/hello.html
@@ -35,8 +35,13 @@ justify-content: center;
         #two{
             grid-row:span 2;
         }
-        .child:hover{
+        /* .child:hover{
             transform: scale(0.9);
+            filter: blur(1px);
+        } */
+
+        .child:hover img{
+            transform: scale(1.1);
             filter: blur(1px);
         }
 
