--- a/HTML/lect12/hello.html
+++ b/HTML/lect12/hello.html
@@ -72,7 +72,8 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
-<div class="card" style="width: 18rem;">
+<div class="d-flex m-5 ">
+<div class="card mx-5" style="width: 18rem;">
   <img src="https://plus.unsplash.com/premium_photo-1766012368356-69b7ee24081d?q=80&w=1074&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
@@ -97,6 +98,6 @@
   </div>
 </div>
 
-    
+ </div>   
 </body>
 </html>
