--- a/HTML/lect12/hello.html
+++ b/HTML/lect12/hello.html
@@ -81,7 +81,7 @@
     <a href="#" class="btn btn-primary">Go somewhere</a>
   </div>
 </div>
-<div class="card" style="width: 18rem;">
+<div class="card mx-5" style="width: 18rem;">
   <img src="https://images.unsplash.com/photo-1768515048597-5dfed4cf7e74?q=80&w=1984&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
@@ -89,7 +89,7 @@
     <a href="#" class="btn btn-primary">Go somewhere</a>
   </div>
 </div>
-<div class="card" style="width: 18rem;">
+<div class="card mx-5" style="width: 18rem;">
   <img src="https://images.unsplash.com/photo-1768515048597-5dfed4cf7e74?q=80&w=1984&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
