--- a/HTML/bootstrap_lect13/index.html
+++ b/HTML/bootstrap_lect13/index.html
@@ -10,6 +10,12 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </head>
 <body>
+    <div class="row">
+        <div class="col-3">1</div>
+        <div class="col-4">2</div>
+        <div class="col-4">3</div>
+       
+    </div>
     
 </body>
 </html>
