--- a/HTML/bootstrap_lect13/index.html
+++ b/HTML/bootstrap_lect13/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="row">
-        <div class="col-3">1</div>
+        <div class="col-4 col-md-3 col-12">1</div>
         <div class="col-4">2</div>
         <div class="col-4">3</div>
        
