--- a/HTML/bootstrap_lect13/hello.html
+++ b/HTML/bootstrap_lect13/hello.html
@@ -6,7 +6,8 @@
     <title>Document</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
+<body class="flex justify-center item-center h-[100vh]">
     <div class="bg-green-800  h-[400px] w-[400px]"></div>
+
 </body>
 </html>
