--- a/portfolio/assignment/index.html
+++ b/portfolio/assignment/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
 <body>
-    
+
+  <!-- NAVBAR -->
+
+  <header>
+    <nav class="max-w-7xl mx-auto px-5 md:px-10 py-4 flex items-center justify-between">
+      <h1 class="text-2xl font-bold">
+        MyPortfolio
+      </h1>
+    </nav>
+  </header>
+  
 </body>
 </html>
