--- a/portfolio/assignment/index.html
+++ b/portfolio/assignment/index.html
@@ -14,6 +14,12 @@
       <h1 class="text-2xl font-bold">
         MyPortfolio
       </h1>
+      <ul>
+        <li><a class="hover:text-white transition" href="#home">Home</a></li>
+        <li><a class="hover:text-white transition" href="#about">About</a></li>
+        <li><a class="hover:text-white transition" href="#skills">Skills</a></li>
+        <li><a class="hover:text-white transition" href="#contact">Contact</a></li>
+      </ul>
     </nav>
   </header>
   
