--- a/portfolio/portfolio1/index.html
+++ b/portfolio/portfolio1/index.html
@@ -5,7 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <style>
-
+        
+        *{
+            margin: 0;
+            padding: 0;
+            /* font-size: large; */
+        }
+        .navbar{
+            background-color: antiquewhite;
+        }
     </style>
 </head>
 <body>
