--- a/portfolio/portfolio1/index.html
+++ b/portfolio/portfolio1/index.html
@@ -10,6 +10,8 @@
             margin: 0;
             padding: 0;
             /* font-size: large; */
+            box-sizing: border-box;
+      font-family: Arial, sans-serif;
         }
         .navbar{
             background-color: antiquewhite;
