--- a/portfolio/portfolio1/index.html
+++ b/portfolio/portfolio1/index.html
@@ -13,9 +13,13 @@
             box-sizing: border-box;
       font-family: Arial, sans-serif;
         }
-        .navbar{
-            background-color: antiquewhite;
-        }
+        
+    body {
+      background: #0f172a;
+      color: white;
+      line-height: 1.6;
+    }
+
     </style>
 </head>
 <body>
