--- a/portfolio/portfolio1/index.html
+++ b/portfolio/portfolio1/index.html
@@ -20,6 +20,17 @@
       line-height: 1.6;
     }
 
+    /* NAVBAR */
+    #navbar{
+        position: sticky;
+      top: 0;
+      background: #111827;
+      padding: 15px 50px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
     </style>
 </head>
 <body>
