--- a/portfolio/portfolio1/index.html
+++ b/portfolio/portfolio1/index.html
@@ -31,6 +31,14 @@
       align-items: center;
     }
 
+    .logo {
+      font-size: 22px;
+      font-weight: bold;
+      color: #8dddff;
+      font-size: large;
+      /* font-family:sans-serif; */
+      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    }
     </style>
 </head>
 <body>
