--- a/portfolio/portfolio1/index.html
+++ b/portfolio/portfolio1/index.html
@@ -39,6 +39,14 @@
       /* font-family:sans-serif; */
       font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     }
+
+     nav a {
+      text-decoration: none;
+      color: white;
+      margin-left: 20px;
+      font-size: 16px;
+      transition: 0.3s;
+    }
     </style>
 </head>
 <body>
