--- a/portfolio/portfolio1/index.html
+++ b/portfolio/portfolio1/index.html
@@ -47,6 +47,9 @@
       font-size: 16px;
       transition: 0.3s;
     }
+     nav a:hover {
+      color: #38bdf8;
+    }
     </style>
 </head>
 <body>
