--- a/portfolio/portfolio1/index.html
+++ b/portfolio/portfolio1/index.html
@@ -65,6 +65,20 @@
     </nav>
   </header>
 
-    
+   <!-- Hero Section -->
+  <section class="hero" id="home">
+    <div class="hero-left">
+      <h1>Hi, I'm <span>Your Name</span></h1>
+      <h3>Web Developer | Designer | Student</h3>
+      <p>
+        I create responsive and modern websites using HTML and CSS.
+      </p>
+
+      <div class="btns">
+        <a href="#projects" class="btn">View Projects</a>
+        <a href="#contact" class="btn outline">Contact Me</a>
+      </div>
+    </div>
+ 
 </body>
 </html>
