--- a/portfolio/portfolio1/index.html
+++ b/portfolio/portfolio1/index.html
@@ -79,6 +79,10 @@
         <a href="#contact" class="btn outline">Contact Me</a>
       </div>
     </div>
+     <div class="hero-right">
+      <div class="profile-circle">Your Photo</div>
+    </div>
+  </section>
  
 </body>
 </html>
