--- a/portfolio/portfolio1/index.html
+++ b/portfolio/portfolio1/index.html
@@ -83,6 +83,15 @@
       <div class="profile-circle">Your Photo</div>
     </div>
   </section>
+
+  <!-- About Section -->
+  <section class="about" id="about">
+    <h2>About Me</h2>
+    <p>
+      Write something about yourself here. Example: I'm a passionate developer
+      who loves creating clean and responsive websites.
+    </p>
+  </section>
  
 </body>
 </html>
