--- a/portfolio/portfolio1/index.html
+++ b/portfolio/portfolio1/index.html
@@ -50,6 +50,16 @@
      nav a:hover {
       color: #38bdf8;
     }
+
+     /* Hero */
+    .hero {
+      min-height: 90vh;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 50px;
+      gap: 40px;
+    }
     </style>
 </head>
 <body>
