--- a/portfolio/portfolio1/index.html
+++ b/portfolio/portfolio1/index.html
@@ -60,6 +60,15 @@
       padding: 50px;
       gap: 40px;
     }
+
+     .hero-left h1 {
+      font-size: 45px;
+    }
+
+    .hero-left h1 span {
+      color: #38bdf8;
+    }
+    
     </style>
 </head>
 <body>
