--- a/portfolio/portfolio1/index.html
+++ b/portfolio/portfolio1/index.html
@@ -68,7 +68,18 @@
     .hero-left h1 span {
       color: #38bdf8;
     }
-    
+
+    .hero-left h3 {
+      margin: 10px 0;
+      font-weight: 400;
+      color: #cbd5e1;
+    }
+
+    .hero-left p {
+      max-width: 500px;
+      margin: 15px 0;
+      color: #e2e8f0;
+    }
     </style>
 </head>
 <body>
