--- a/portfolio/portfolio1/index.html
+++ b/portfolio/portfolio1/index.html
@@ -80,6 +80,20 @@
       margin: 15px 0;
       color: #e2e8f0;
     }
+     .btns {
+      margin-top: 20px;
+    }
+
+    .btn {
+      display: inline-block;
+      padding: 12px 20px;
+      background: #38bdf8;
+      color: #0f172a;
+      text-decoration: none;
+      border-radius: 8px;
+      margin-right: 10px;
+      font-weight: bold;
+    }
     </style>
 </head>
 <body>
