--- a/portfolio/portfolio1/index.html
+++ b/portfolio/portfolio1/index.html
@@ -94,6 +94,12 @@
       margin-right: 10px;
       font-weight: bold;
     }
+
+    .btn.outline {
+      background: transparent;
+      border: 2px solid #38bdf8;
+      color: #38bdf8;
+    }
     </style>
 </head>
 <body>
